Added pre-auth